# mindbridge-databricks-notebooks

./: 1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb  2_MindBridge_Explore_Table_general_ledger_journal.ipynb  2_MindBridge_Explore_Table_general_ledger_journal.py  3_MindBridge_Databricks_E2E_Analysis_Data_Flow.ipynb  3_MindBridge_Databricks_E2E_Analysis_Data_Flow.py  4.1_MindBridge_Subledger_Import_Data_and_Rerun_Analysis.ipynb  4.1_MindBridge_Subledger_Import_Data_and_Rerun_Analysis.py  4_MindBridge_Import_Data_and_Rerun_Analysis.ipynb  4_MindBridge_Import_Data_and_Rerun_Analysis.py  5_MindBridge_Databricks_Visualization_Example.ipynb  5_MindBridge_Databricks_Visualization_Example.py  6_MB_Results_to_Unity_Catalog.ipynb  6_MB_Results_to_Unity_Catalog.py  7_Task_Assignment_Prototype.ipynb  README.md  pyproject.toml
results/: result.csv
